// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateIndexPatternWizard defaults to the loading state 1`] = `
<div>
  <Header
    isIncludingSystemIndices={false}
    onChangeIncludingSystemIndices={[Function]}
  />
  <LoadingState />
</div>
`;

exports[`CreateIndexPatternWizard renders index pattern step when there are indices 1`] = `
<div>
  <Header
    isIncludingSystemIndices={false}
    onChangeIncludingSystemIndices={[Function]}
  />
  <StepIndexPattern
    allIndices={
      Array [
        Object {},
      ]
    }
    esService={Object {}}
    goToNextStep={[Function]}
    initialQuery=""
    isIncludingSystemIndices={false}
    savedObjectsClient={Object {}}
  />
</div>
`;

exports[`CreateIndexPatternWizard renders the empty state when there are no indices 1`] = `
<div>
  <Header
    isIncludingSystemIndices={false}
    onChangeIncludingSystemIndices={[Function]}
  />
  <EmptyState
    loadingDataDocUrl=""
    onRefresh={[Function]}
  />
</div>
`;

exports[`CreateIndexPatternWizard renders time field step when step is set to 2 1`] = `
<div>
  <Header
    isIncludingSystemIndices={false}
    onChangeIncludingSystemIndices={[Function]}
  />
  <StepTimeField
    createIndexPattern={[Function]}
    goToPreviousStep={[Function]}
    indexPattern=""
    indexPatternsService={Object {}}
  />
</div>
`;
